// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group displays a group 1`] = `
<div
  className="frames-group"
  onContextMenu={[Function]}
>
  <li
    className="group"
    onClick={[Function]}
    tabIndex={0}
    title="Show Back frames"
  >
    <span
      className="title"
    >
      foo
    </span>
    <Badge>
      1
    </Badge>
    <FrameLocation
      frame={
        Object {
          "displayName": "foo",
          "library": "Back",
        }
      }
    />
  </li>
</div>
`;

exports[`Group passes the getFrameTitle prop to the Frame components 1`] = `
<div
  className="frames-group expanded"
  onContextMenu={[Function]}
>
  <li
    className="group"
    key="1"
    onClick={[Function]}
    tabIndex={0}
    title="Collapse Back frames"
  >
    <span
      className="title"
    >
      renderFoo
    </span>
    <Badge>
      3
    </Badge>
    <FrameLocation
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
  </li>
  <div
    className="frames-list"
  >
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "a",
          "id": 2,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "b",
          "id": 3,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      getFrameTitle={[Function]}
      hideLocation={true}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
  </div>
</div>
`;

exports[`Group renders group with anonymous functions 1`] = `
<div
  className="frames-group"
  onContextMenu={[Function]}
>
  <li
    className="group"
    key="1"
    onClick={[Function]}
    tabIndex={0}
    title="Show Back frames"
  >
    <span
      className="title"
    >
      &lt;anonymous&gt;
    </span>
    <Badge>
      3
    </Badge>
    <FrameLocation
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
  </li>
</div>
`;

exports[`Group renders group with anonymous functions 2`] = `
<div
  className="frames-group expanded"
  onContextMenu={[Function]}
>
  <li
    className="group"
    key="1"
    onClick={[Function]}
    tabIndex={0}
    title="Collapse Back frames"
  >
    <span
      className="title"
    >
      &lt;anonymous&gt;
    </span>
    <Badge>
      3
    </Badge>
    <FrameLocation
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
    />
  </li>
  <div
    className="frames-list"
  >
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "",
          "id": 1,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/mahscripts.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "",
          "id": 2,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
    <Frame
      copyStackTrace={[MockFunction]}
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "",
          "id": 3,
          "library": "Back",
          "location": Object {
            "line": 55,
          },
          "source": Object {
            "url": "http://myfile.com/back.js",
          },
        }
      }
      frameworkGroupingOn={true}
      hideLocation={true}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={Object {}}
      shouldMapDisplayName={false}
      toggleBlackBox={[MockFunction]}
      toggleFrameworkGrouping={[MockFunction]}
    />
  </div>
</div>
`;
